fix(DPLAN-15097): sidemenu layout issue (#4390)
fix(DPLAN-15097): using 'inset' inside the 'padding' was incorrect, so removed inset and use spacing direct with padding

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_sidemenu.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_sidemenu.scss
@@ -47,9 +47,7 @@
         & > li {
             & > a {
                 display: block;
-                padding: {
-                    inset: $inuit-base-spacing-unit--small $inuit-base-spacing-unit $inuit-base-spacing-unit--small $inuit-base-spacing-unit;
-                }
+                padding: $inuit-base-spacing-unit--small $inuit-base-spacing-unit $inuit-base-spacing-unit--small $inuit-base-spacing-unit;
             }
 
             &.current_ancestor,
